# ChangeLog for mate-base/mate-session-manager
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mate-base/mate-session-manager/ChangeLog,v 1.19 2015/07/15 06:06:10 np-hardass Exp $

*mate-session-manager-1.8.1-r2 (15 Jul 2015)

  15 Jul 2015; NP-Hardass <NP-Hardass@gentoo.org>
  +mate-session-manager-1.8.1-r2.ebuild:
  Fix upower dependencies. Thanks to sdnick484 for pointing it out.

  11 Jul 2015; NP-Hardass <NP-Hardass@gentoo.org>
  mate-session-manager-1.8.1-r1.ebuild:
  Deprecate 1.6

  11 Jul 2015; NP-Hardass <NP-Hardass@gentoo.org> metadata.xml:
  Update metadata.xml with mate herd

  20 Dec 2014; Matthias Maier <tamiko@gentoo.org>
  -mate-session-manager-1.6.1-r1.ebuild:
  drop old

  19 Sep 2014; Samuli Suominen <ssuominen@gentoo.org>
  -mate-session-manager-1.8.1.ebuild:
  old

  19 Sep 2014; Samuli Suominen <ssuominen@gentoo.org>
  mate-session-manager-1.6.1-r1.ebuild, mate-session-manager-1.8.1-r1.ebuild:
  Remove dependency of <sys-power/upower-0.99 from || ( ) construct.

  24 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  Punt description for USE="upower" which is a global USE flag now.

  02 Jul 2014; Pacho Ramos <pacho@gentoo.org>
  mate-session-manager-1.8.1-r1.ebuild:
  x86 stable, bug 513714

  02 Jul 2014; Pacho Ramos <pacho@gentoo.org>
  mate-session-manager-1.8.1-r1.ebuild:
  amd64 stable, bug 513714

  07 Jun 2014; Agostino Sarubbo <ago@gentoo.org>
  mate-session-manager-1.8.1-r1.ebuild:
  Add ~x86, wrt bug #508072

  31 May 2014; Tom Wijsman <TomWij@gentoo.org>
  mate-session-manager-1.6.1-r1.ebuild, mate-session-manager-1.8.1-r1.ebuild,
  mate-session-manager-1.8.1.ebuild:
  Fix up upower dependency, due to the 0.9 -> 0.99 bump; with help from
  ssuominen.

*mate-session-manager-1.8.1-r1 (29 May 2014)

  29 May 2014; Pacho Ramos <pacho@gentoo.org>
  +mate-session-manager-1.8.1-r1.ebuild:
  upower support relies on old upower, systemd setups are supposed to rely on