@@ -11,23 +11,22 @@ AUX mate-session-manager-1.6-gnome-keyring.patch 8857 SHA256 d0fae72ab5be01d9f07
 AUX mate-session-manager-1.6.1-login1.patch 7819 SHA256 7d0141356e09e00812165b55a0e8a04659decb304a9eebd6737f1bccd83cb80f SHA512 55452c738cbd80b80cfcd1cfda0e23e79a5d1626e34e75a978561ff748787e5283c09531db435333bf2fcd7f06249d738b4a08929ae902da2ef4c11c9baf2bbc WHIRLPOOL 01ff8e0b89cb480b07d2adb5bd2f608da1432ae35028a407776306ec386953785b45fcf75e1cd269558cf8fe27268141629d44679d11ae72ea822305b8b2b863
 DIST mate-session-manager-1.8.1.tar.xz 524204 SHA256 2f85a714704bc475d08809be6ecf24a5d94d2e2d0ea5ac704d67557c349d7b8c SHA512 1b09a471db710193a643ec90c9b153468d9a303957b9c4da4e30cf470aa5f582b6992f5e0ed69129943aa44f7c4e372e2a8554fc6020627817a3c49d656ca5b5 WHIRLPOOL 8c771ac713da92c2ae8bccc173a9cba4fc5bb16a943e588c679624e3e945555f2c37511426e666f38440947ec37139452ee230d07bc3a414a65629c04bfd31a6
 EBUILD mate-session-manager-1.8.1-r1.ebuild 2683 SHA256 6a66f43b992b75154b5b00bf1c4daee635f543dfb4234ff6dde8bd990da0beb9 SHA512 42892ef1364646ab267186ad7960c70430064852c7aeb067e65be91199824d8e20842b92d853a8a7399cac1d9d2e5994c5d273eb301728a5e9750dd0fe148c07 WHIRLPOOL de82a1f647b9432572b659e769636c862b89392ec23453e2c7543e3633913dfa8215b5d525179f44b7a0839c3c9387c53946a76ad3b229fcdc9f7a4bb040c991
-EBUILD mate-session-manager-1.8.1-r2.ebuild 2720 SHA256 f6009aa90d3c8afd091543fde05bd9924fd193402d130ee6f54afe824945680e SHA512 dd49b93f8e0956f824794c495e0ca4e7425f1c79ebe5051159f362cc82bb3193c2c063e489eb2fa24d0c2b7acc9c01757075bab9a63ccecc4dbff68394e3aeba WHIRLPOOL 0bcbe1ecf472960581a4a52437928750943234ddf723d339e9b9e28f34c28731e1b3a16b41b320fbc8abf18ea99a4ea561e87afa296253b11e57526192819db3
-MISC ChangeLog 3539 SHA256 13a2a80eb2fff83f400e132be72e2ed6714b5379076827396ce005d3584a3d34 SHA512 e59cdaed85431a313e12cc915ea4338940a24df1b1e67b6f7158cc290765adfe993c50549a5a5765feffc9c09daacddd7a3437633ab95ab8f999ffc77a76c3d2 WHIRLPOOL bdd45628f45b71c4ee0d50c40d493faf0c0e805b720963f98a0580afe30d2fb4de1e725721e4b40fb2d4bfebd7f7e078d3ae4a986e8f38b135de4967f5e186e5
+MISC ChangeLog 3680 SHA256 169c0feb5c363264938f5aeb73c46539707d7bfeb48354d59b8567f6dcf39082 SHA512 2325098365135e472a9a6b31f0b5ab51e4585ae3015dba62f1ee66923b4d0c4c0d90b2a6fa8c68fe0814b5b0a42682e2616abb00f6a144ee1a2694723e9d774e WHIRLPOOL 12d9b0261bf9e7ac278770a8202ed8bc5decee28220d4d8b79d18e3e791241c8457ae8deb499fca61ad5587f496164f51443187848f196dfbb942931126149ef
 MISC metadata.xml 271 SHA256 7e3d0b8509870eaa0238a46ec383250288382a1733764f2e1be76298a640845e SHA512 1c4be914d1764dae6071e7b25d652275d9eef62d96aa2630dce7298e4b392b89ddde264b9d35c6a020cf82bcdf7948e4240ca864b32b07ffbba27891dd8c2cb3 WHIRLPOOL 3e60f953449a94cc05c20dc0c017e0b06f629d3ae03d7ac442e85ddb3b53271f54a1d27428b2ccfa5c3c2bf835a1eb3c489d507f0e542e1af2753549eed7247c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVpfhQAAoJEBzZQR2yrxj7j30P/jGUIXPrhsPR5RtAudfLLOiT
-wfDbWBHCvyI1BZY5x5OOPHqiZzEhy0+c4wIqf51YJZ9M6O+pZ7c1+REw756+F6M2
-p9dPMK6IriuCBeFnH83YxHlivLiSftPXnCAdSgqrJLGH9VSmVS7ldvOQOaxj5V5/
-ed33UDf2+cSwlroy+cZFPzoNN+pV6bMOQhvFezosWnKfnTtvwBDHRCxc09VLb1rR
-eCw8TPCLTA4lzojwabmhNxwI+V3H8rpdCd0VQx1JNHtrpsKurE9/3ki0g63V+b90
-5IIvGDHAKmf22nyb0jN93GMAwYsz795gKC9ESLxvXBcqjq9wWE8eKNcffkdGVfOl
-5tEnINgT+tXKl+jyELvYxGvFrPvHf+7M7AZZt5DvbVHf0asfzUSVcYhLwJ49R1/r
-+NYelRKGws9WqkJjAR94eCgdqLRZenafd05wYYctK/dUzQCwrTRYqecbvGH/v4tE
-0JNZBYgxFYrINlIqtz1YbPvHu7lS1OLbnU72IS+fJqi518ufKUI7fMs7+jrtT8Fa
-kHIbnbhdUILXl3weBZ6DzZdm3+QOSU9oOZWSClV4bAhCtMpY1KVOVoCG0D7JIBvZ
-i/j5N2HEvuOV52iG5JMBGZ6G0f2wW9Xg+8VZEJPqAkeUJu7pSvJ6xlVqIGqZWnBp
-jiv0GCoW6BIXJmGB1cAb
-=afPs
+iQIcBAEBCAAGBQJVpgQAAAoJEBzZQR2yrxj7y+kP/ild269mA24NH7G1ATnQ5Kuf
++DUYhwIhr27k3Yj3KWMuUiY2V3P8ylQe3pg8A5IzOm8dQxaKFGT5UNrn1XdtR1cr
+2ugXYcaXmu7Bkhrm3oYOtykoiuWoSA8JScbgbJ7PkglKKf72tLYaTgh1e4oUdJzN
+nj0niNgmjsHm1CCQ979ZPkGydG5MR0WFu2B416ThTn8lcJgPxPwVJlJeUJL0nM+W
+qR8/lMNWt5CYZRNglR1DsJIy0KpEz4hcYeJcOoE58p2KbHASXwkdkyZHsCIrm1qr
+hb2p6YjOiHaCHCkuDUIBYma8JZzqq62MgSj4TxZ++9r2RIWtcjeFWEbb0R8/V6Uj
+vLfktKrtVS2PsvZLQQtm0tbgsC9RzgVQI8ptMFsDVUZcfcm+ngnJvg8tnmYLVj1L
+D7AuZif2GLFVxLSVR1Z1PDx62g3YXA+D5BJWiKJLrRwwK8fj+7Qydio6/pd+UdOR
+YSH4lg09PUjPQABbr/Y2gX6ZnEbNBn4ZDke7UE9H5v/hUChaVYdYK8GsTFNbyjYM
+2X5vj8dE1m4wY88rxnCE+PmXFp3PpCML2+oc7n4+3c4el1WWulFCknFvu8yInDiI
+qimMkHkxL37+PEsWuZjkT8rP0L8qlKyi2MT0upfpEjcwLiMCqDmcQXFRmo5fGnIE
+Nzql1wUlPXWheDYywizk
+=L+VR
 -----END PGP SIGNATURE-----
